# gasflow

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json
backend/: Cargo.toml
backend/migrations/: 0002_delivery_failures.sql  0003_password_hashing.sql  0004_audit_events.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/auth/: jwt.rs
backend/src/adapters/db/: repository.rs
backend/src/adapters/http/: handlers.rs  router.rs
backend/src/application/auth/: service.rs
backend/src/application/deliveries/: register_failed_delivery.rs
backend/src/application/dispatch/: mod.rs
backend/src/application/orders/: change_status.rs  create_order.rs  list_orders.rs  mod.rs
backend/src/application/stock/: register_inbound.rs  summary.rs
backend/src/domain/: audit.rs  auth.rs  delivery.rs  error.rs  mod.rs  orders.rs  stock.rs
backend/src/ports/: deliveries_port.rs  mod.rs  orders_port.rs  stock_port.rs
docs/: ARCHITECTURE.md  BACKLOG.md  PRD.md
docs/adr/: 0001-monolith-hexagonal.md
gasflow-starter/: .env.example  README.md
gasflow-starter/.codex/: config.toml
gasflow-starter/.github/workflows/: ci.yml
gasflow-starter/backend/: Dockerfile
gasflow-starter/docs/: ARCHITECTURE.md  BACKLOG.md
gasflow-starter/mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/: App.tsx  README.md  app.json  jest.setup.js  package-lock.json  package.json  tsconfig.json
mobile/__tests__/: e2e_admin_flow.test.tsx  e2e_driver_flow.test.tsx  e2e_login.test.tsx  e2e_offline_flow.test.tsx
(+53 files in other folders)
