[package]
name = "gasflow-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
utoipa = { version = "5.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http = "1.0"
tower = { version = "0.4", features = ["util"] }
mime = "0.3"
